--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <footer>
         <div class="center">
-            Copyright &copy; www.myOnlineMeal.com. All rights reserved!
+            Copyright &copy; www.mysofaCenter.com. All rights reserved!
         </div>
     </footer>
 </body>
